--- a/style.css
+++ b/style.css
@@ -21,6 +21,32 @@
   display: flex;
   flex-flow: column wrap;
 
+  padding: 100px 200px;
   background-color: rgb(22, 22, 22);
   color: cornsilk;
  }
+
+ .nav-bar{
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  gap: 20px;
+ }
+#logo{
+  display: flex;
+  width: 75px;
+  height: auto;
+}
+#nav-links{
+  display: flex;
+  gap: 100px;
+  align-items: center;
+}
+.nav-link{
+  display: flex;
+  font-size: 30px
+}
+
+img{
+  width: 300px;
+}
