--- a/style.css
+++ b/style.css
@@ -21,7 +21,6 @@
   display: flex;
   flex-flow: column wrap;
 
-  padding: 100px 200px;
   background-color: rgb(22, 22, 22);
   color: cornsilk;
  }
@@ -31,10 +30,12 @@
   flex-flow: row wrap;
   justify-content: space-between;
   gap: 20px;
+  padding: 25px 50px;
+  background-color: rgb(47, 0, 0)
  }
 #logo{
   display: flex;
-  width: 75px;
+  width: 50px;
   height: auto;
 }
 #nav-links{
@@ -44,7 +45,8 @@
 }
 .nav-link{
   display: flex;
-  font-size: 30px
+  font-size: 20px;
+  color: yellow;
 }
 
 img{
