Style: Remove header style

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
   color: inherit;
  }
 
- /* Temporary */
+/* Temporary */
 
 img{
   width: 300px;
@@ -38,7 +38,7 @@ img{
   padding: 25px 50px;
  }
 
- /* Navigationa Bar */
+ /* Navigation Bar */
 
  .nav-bar{
   display: flex;
@@ -65,72 +65,3 @@ img{
 
 /* Header */
 
-.header,
-.text-container,
-.hero-container,
-.hero, .hero-sub,
-.hero-btn,
-.image-container, .hero-img{
-  display: flex;
-  flex-flow: row wrap;
-}
-
-.header{
-  justify-content: space-between;
-  gap: 20px;
-}
-
-.text-container,
-.image-container{
-  flex: 1 1 0;
-}
-
-.text-container{
-  flex-direction: column wrap;
-  gap: 20px;
-  justify-content: space-between;
-  align-content: flex-start;
-}
-
-.hero-container{
-  display: flex;
-}
-
-.hero{
-  font-size: 50px;
-  font-weight: bolder;
-  color: rgba(0, 140, 0, 1);
-}
-.hero-sub{
-  font-size: 18px;
-  text-align: justify;
-  color: cornsilk;
-}
-
-.btn-container{
-  display: flex;
-  flex-flow: column wrap;
-  justify-content: flex-end;
-}
-
-.hero-btn{
-  padding: 5px 50px;
-  font-size: 18px;
-  justify-content: center;
-  align-items: center;
-
-  color: cornsilk;
-  background-color: rgb(188, 0, 0);
-  border: 0px solid black;
-  border-radius: 10px;
-}
-
-.image-container{
-  justify-content: center;
-  align-items: center;
-}
-#hero-img{
-  width: 500px;
-  height: auto;
-  border-radius: 10px;
-}
